# kiyodesk

./: .gitignore  .replit  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_CONTEXT.md  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  replit.md  repo.ps1  start_kiyodesk.bat
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  tmp_push_test_trades.py
backend/alembic/: env.py
backend/alembic/versions/: 20260718_0001_initial_schema.py  (+1 more)
backend/app/: __init__.py  main.py
backend/tests/: test_analytics.py  test_bos.py  test_candle_loader.py  test_ccxt_exchange_factory.py  test_ccxt_normalizer.py  test_ccxt_provider.py  test_ccxt_wiring.py  test_deduplicator.py  test_event_bus.py  test_health.py  test_htf_trend.py  test_kiyotaka_provider.py  test_lifecycle_manager.py  test_opportunities_api.py  test_opportunity_manager.py  test_opportunity_repository.py  test_ote.py  test_provider_manager.py  test_recent_signals.py  test_risk.py  test_settings_api.py  test_strategy_config.py  test_strategy_engine.py  test_strategy_runtime.py  test_strategy_service.py  test_swing.py  test_timeframe_config.py  test_trade_opportunity_model.py  test_trade_service.py  test_trade_setup.py
docker/: docker-compose.yml
docs/: ARCHITECTURE.md
docs/architecture/: EVENT_BUS.md
docs/runtime/: LIFECYCLE.md  OPPORTUNITIES.md  RUNTIME.md
docs/strategy/: ICT.md  STRATEGY.md  TRADE_SETUP.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
(+98 files in other folders)
