[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20,<1.0",
    "alembic>=1.13,<2.0",
    "apscheduler>=3.10,<4.0",
    "asyncpg>=0.31.0",
    "ccxt==4.4.30",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "loguru>=0.7,<1.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.4,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]
